// datasource and generator remain the same
datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

generator client {
    provider = "prisma-dbml-generator"
}

model User {
    id               String   @id @default(cuid())
    clerkId          String   @unique
    name             String
    username         String   @unique
    email            String   @unique
    password         String?
    bio              String?
    picture          String
    location         String?
    portfolioWebsite String?
    reputation       Int      @default(0)
    joinedAt         DateTime @default(now())

    questions          Question[]
    savedQuestions     SavedQuestion[]
    answers            Answer[]
    interactions       Interaction[]
    upvotedQuestions   QuestionUpvote[]
    downvotedQuestions QuestionDownvote[]
    upvotedAnswers     AnswerUpvote[]
    downvotedAnswers   AnswerDownvote[]
    followedTags       TagFollower[]
}

model Question {
    id        String   @id @default(cuid())
    title     String
    content   String
    views     Int      @default(0)
    createdAt DateTime @default(now())

    authorId String
    author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

    answers      Answer[]
    interactions Interaction[]

    tags      QuestionTag[]
    upvotes   QuestionUpvote[]
    downvotes QuestionDownvote[]
    savedBy   SavedQuestion[]
}

model Answer {
    id        String   @id @default(cuid())
    content   String
    createdAt DateTime @default(now())

    authorId String
    author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

    questionId String
    question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

    interactions Interaction[]

    upvotes   AnswerUpvote[]
    downvotes AnswerDownvote[]
}

model Tag {
    id          String   @id @default(cuid())
    name        String   @unique
    description String
    createdOn   DateTime @default(now())

    interactions InteractionTag[]
    questions    QuestionTag[]
    followers    TagFollower[]
}

model Interaction {
    id        String   @id @default(cuid())
    action    String
    createdAt DateTime @default(now())

    tags InteractionTag[]

    userId String
    user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

    questionId String?
    question   Question? @relation(fields: [questionId], references: [id])

    answerId String?
    answer   Answer? @relation(fields: [answerId], references: [id])
}

// --- EXPLICIT JOIN TABLES for Many-to-Many Relationships ---

model SavedQuestion {
    userId     String
    user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    questionId String
    question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

    @@id([userId, questionId])
}

model QuestionUpvote {
    userId     String
    user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    questionId String
    question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

    @@id([userId, questionId])
}

model QuestionDownvote {
    userId     String
    user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    questionId String
    question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

    @@id([userId, questionId])
}

model AnswerUpvote {
    userId   String
    user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
    answerId String
    answer   Answer @relation(fields: [answerId], references: [id], onDelete: Cascade)

    @@id([userId, answerId])
}

model AnswerDownvote {
    userId   String
    user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
    answerId String
    answer   Answer @relation(fields: [answerId], references: [id], onDelete: Cascade)

    @@id([userId, answerId])
}

model QuestionTag {
    questionId String
    question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)
    tagId      String
    tag        Tag      @relation(fields: [tagId], references: [id], onDelete: Cascade)

    @@id([questionId, tagId])
}

model TagFollower {
    userId String
    user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
    tagId  String
    tag    Tag    @relation(fields: [tagId], references: [id], onDelete: Cascade)

    @@id([userId, tagId])
}

model InteractionTag {
    interactionId String
    interaction   Interaction @relation(fields: [interactionId], references: [id], onDelete: Cascade)

    tagId String
    tag   Tag    @relation(fields: [tagId], references: [id], onDelete: Cascade)

    @@id([interactionId, tagId])
}
